src/objects/IntegrationEndpoint_CF__mdt.object
<CustomObject>
    <description>This object helps to store the Integration Endpoints per environment.</description>
    <fields>
        <fullName>Access_End_Time__c</fullName>
        <label>Access End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AuthenticationToken_CF__c</fullName>
        <description>Field to provide Authentication Tokens.</description>
        <inlineHelpText>Field to provide Authentication Tokens.</inlineHelpText>
        <label>Authentication Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint_CF__c</fullName>
        <description>External Endpoint.</description>
        <inlineHelpText>External Endpoint.</inlineHelpText>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Environment_CF__c</fullName>
        <description>Environment for this specific endpoint.</description>
        <inlineHelpText>Environment for this specific endpoint.</inlineHelpText>
        <label>Environment</label>
        <referenceTo>Environment_CF__mdt</referenceTo>
        <relationshipLabel>Integration Endpoints</relationshipLabel>
        <relationshipName>Integration_Endpoints</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsActive_CF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if the Enpoint is active.</description>
        <inlineHelpText>Defines if the Enpoint is active.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
</CustomObject>